--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css"/>
 </head>
 <body>
+  <h1 style="text-align: center;">APY Dashboard</h1>
   <div id="root"></div>
 </body>
 </html>
